test/corpus/L1/negative/unterminated-char.st
"---
kind: negative
section: error.unterminated-char
codes: E_UNTERMINATED_CHAR
---"
$
